--- a/index.html
+++ b/index.html
@@ -49,25 +49,33 @@
                 </div>
                 <div class="skills-box">
                     <p class="skills-tittle">Back-end</p>
+                    <i class="devicon-nodejs-plain colored"></i>
                     <i class="devicon-php-plain colored"></i>
+                    <i class="devicon-csharp-plain colored"></i>
                 </div>
                 <div class="skills-box">
                     <p class="skills-tittle">Databases</p>
-                    <i class="devicon-mysql-plain colored"></i>
+                    <i class="devicon-mysql-plain-wordmark colored"></i>
+                    <i class="devicon-microsoftsqlserver-plain-wordmark"></i>         
                 </div>
                 <div class="skills-box">
                     <p class="skills-tittle">Front-end Frameworks</p>
-                    <ion-icon id="Loading" name="hourglass-outline"></ion-icon>
+                    <i class="devicon-jquery-plain-wordmark colored"></i>
                 </div>
                 <div class="skills-box">
                     <p class="skills-tittle">Back-end Frameworks</p>
                     <ion-icon id="Loading" name="hourglass-outline"></ion-icon>
                 </div>
                 <div class="skills-box">
+                    <p class="skills-tittle">Styles Frameworks</p>
+                    <i class="devicon-bootstrap-plain colored"></i>
+                </div>
+                <div class="skills-box">
                     <p class="skills-tittle">Tools</p>
                     <i class="devicon-vscode-plain colored"></i>
                     <i class="devicon-git-plain colored"></i>
                     <i class="devicon-github-original"></i>
+                    <i class="devicon-linux-plain"></i>
                 </div>
             </div>
         </section>
