--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <i class="devicon-nodejs-plain colored"></i>
                     <i class="devicon-php-plain colored"></i>
                     <i class="devicon-csharp-plain colored"></i>
+                    <i class="devicon-java-plain-wordmark colored"></i>
                 </div>
                 <div class="skills-box">
                     <p class="skills-tittle">Databases</p>
