--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                     <i class="devicon-javascript-plain colored"></i>
                 </div>
                 <div class="skills-box">
-                    <p class="skills-tittle">Back-end</p>  
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" />
-                    <i class="devicon-cplusplus-plain colored"></i>
+                    <p class="skills-tittle">Back-end</p> 
+                    <i class="devicon-cplusplus-plain colored"></i> 
+                    <i class="devicon-python-plain colored"></i>
                 </div>
                 <div class="skills-box">
                     <p class="skills-tittle">Databases</p>
