--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <ul id="social-container">
                 <li><a href="https://www.facebook.com/pfonsecc" target="_blank" ><ion-icon name="logo-facebook"></ion-icon></a></li>
                 <li><a href="https://www.linkedin.com/in/pedro-gabriel-fonseca-508733234/" target="_blank" ><ion-icon name="logo-linkedin"></ion-icon></a></li>
-                <li><a href="https://www.instagram.com/pedrogabf/" target="_blank" ><ion-icon name="logo-instagram"></ion-icon></a></li>
+                <li><a href="https://www.instagram.com/pgfpedro/" target="_blank" ><ion-icon name="logo-instagram"></ion-icon></a></li>
             </ul>
             <div id="email-container">
                 <ion-icon name="mail-outline"></ion-icon><a href="mailto:pedrofons8@gmail.com">pedrofons8@gmail.com</a>
@@ -65,8 +65,8 @@
                     <i class="devicon-react-original colored"></i>
                 </div>
                 <div class="skills-box">
-                    <p class="skills-tittle">Back-end Frameworks</p>
-                    <i class="devicon-fastapi-plain-wordmark"></i>
+                    <p class="skills-tittle">Back-end Frameworks</p>      
+                    <i class="devicon-fastapi-plain"></i>         
                 </div>
                 <div class="skills-box">
                     <p class="skills-tittle">Styles Frameworks</p>
